# lightlemma

./: .bumpversion.cfg  .gitignore  DEPLOYMENT.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test-and-deploy.yml  version_bump.py
lightlemma/: __init__.py  lemmatizer.py  stemmer.py  tokenizer.py
lightlemma/data/: irregular_forms.json
tests/: test_lemmatizer.py  test_stemmer.py  test_tokenizer.py
